profile page mobile issues updated - set overflow x hideen

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -1251,11 +1251,6 @@ article.node-223806{
 
 
 /* fixed this one all mobiel view scrolling */
-.nav-active .nav-holder {
-  margin-right: 0;
-  right:0;
-}
-.nav-holder{
-  margin-right: 0;
-  right: -469px;
+body{
+  overflow-x:hidden;
 }
